# llm-vulvariant

./: .gitignore  README.md  agentic_vuln_finder.py  agentic_vuln_finder_notool.py  codeql-search-similar-module.py  generate-software-profile-llama-index.py  generate-vuln-profile-llama-index.py  generated_codeql_query.ql  llm-reason-similar-module.py  pyproject.toml  test-ossys.csv  test.ipynb  test.py  test_codeql_nemo_with_llm.py  test_utils.py  verify-codeql-exploitability.py
.agents/: AGENTS.md
.codeql-queries/: README.md  argparse_taint_test.ql  codeql-pack.lock.yml  command_execution_sinks.ql  command_injection2.ql  command_injection_os_system.ql  deserialization_sinks.ql  os_system_calls.ql  os_system_non_literal.ql  pickle_load_calls.ql  prompt_template_calls.ql  remote_sources.ql  render_calls.ql  shell_true_injection.ql  sql_injection_concatenation.ql  sql_injection_flow.ql  subprocess_string_arg.ql  url_calls.ql  yaml_load_calls.ql  yaml_load_check.ql
config/: codeql_config.yaml  llm_config.yaml  paths.yaml  repo_analyzer_rules.yaml  scanner_config.yaml  software_profile_rule.yaml
core/: __init__.py  codeql_native.py  config.py  llm_client.py  profile_storage.py  scanner.py  software_profile.py  vuln_profile.py
docs/: data-and-repositories.md  getting-started.md  parameter-reference.md  pipeline-recipes.md  runtime-requirements.md
notebooks/: similarity.ipynb
scripts/: SOLUTION_SUMMARY.md  checkout_main.sh  profile_paths.sh  run-module-scan.sh  run_all_software_profiles.sh  run_all_vuln_software_profile.sh  run_all_vulnerability_profiles.sh  (+10 more)
(+270 files in other folders)
