[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-vulvariant"
version = "0.1.7"
description = "LLM-based vulnerability variant detection and analysis"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
software-profile = "cli.software:main"
vuln-profile = "cli.vulnerability:main"
scanner = "cli.agent_scanner:main"
batch-scanner = "cli.batch_scanner:main"

[tool.setuptools]
packages = {find = {where = ["src"]}}

[tool.setuptools.package-dir]
"" = "src"
